# gamemonkey-unofficial

./: CMakeLists.txt  README.md  gmConfig_p.h.in
include/gamemonkey/: gmArraySimple.h  gmConfig_p.h  gmMachine.h  gmParser.cpp.h
include/gamemonkey/platform/win32gcc/: gmConfig_p.h
src/: gmMachineLib.cpp  gmParser.cpp  gmScanner.cpp
tools/gmd/: gmd.sln
tools/gml/: gml.sln
